# smh-fastapi-backend-templates

./: README.md  pyproject.toml
templates/: cli.py
templates/fastapi-backend/: .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  watchdog.ini
templates/fastapi-backend/app/config/: logging_config.py  orjsonConfig.py
templates/fastapi-backend/app/database/postgres/: db.py
templates/fastapi-backend/app/helpers/utilities/: envVar.py  get_free_cpus.py  iso8601.py  queue_util.py  string.py
templates/fastapi-backend/app/routers/: health.py
