[tool.poetry]
name = "smh-fastapi-backend-templates"
version = "0.1.0"
description = "A CLI tool for managing templates"
authors = ["Your Name <your@email.com>"]
packages = [{ include = "templates" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
smh-fastapi-backend-templates = "templates.cli:main"
